--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,9 @@
 name: test
 on:
   workflow_call:
+    inputs:
+      targets:
+        required: false
     secrets:
       gh_token:
         required: false
@@ -28,11 +31,11 @@ permissions:
     runs-on: ${{matrix.target.runs_on}}
     needs: setup
     # if services is empty, the build job is skipped
-    if: "join(fromJSON(needs.setup.outputs.targets), '') != ''"
+    if: "join(fromJSON(inputs.targets), '') != ''"
     strategy:
       fail-fast: true
       matrix:
-        target: ${{fromJSON(needs.setup.outputs.targets)}}
+        target: ${{fromJSON(inputs.targets)}}
     env:
       TFACTION_TARGET: ${{matrix.target.target}}
       TFACTION_JOB_TYPE: ${{matrix.target.job_type}}
