--- a/.github/workflows/setup.yaml
+++ b/.github/workflows/setup.yaml
@@ -9,8 +9,6 @@ on:
         required: false
       gh_app_private_key:
         required: false
-      token:
-        required: false
     outputs:
       targets: ${{jobs.setup.outputs.targets}}
 
@@ -24,10 +22,9 @@ jobs:
       - uses: suzuki-shunsuke/github-token-action@04d633c696e9d09e958c8b815c75db9606d6d927 # v0.2.0
         id: token
         with:
-          github_token: ${{secrets.gh_token}}
           github_app_id: ${{secrets.gh_app_id}}
           github_app_private_key: ${{secrets.gh_app_private_key}}
-          default_github_token: ${{secretstoken}}
+          default_github_token: ${{secrets.gh_token}}
 
       - uses: aquaproj/aqua-installer@d9c4b5d107a17831a8c8718efa4ce67a0923d1f5 # v2.1.3
         with:
