--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,7 @@ permissions:
   contents: read
   pull-requests: write
 
-
+jobs:
   plan:
     name: "plan (${{matrix.target.target}})"
     runs-on: ${{matrix.target.runs_on}}
