--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,10 +2,6 @@
 name: test
 on:
   workflow_call:
-    inputs:
-      targets:
-        type: string
-        required: false
     secrets:
       gh_token:
         required: false
@@ -21,16 +17,41 @@ on:
 env:
   TFACTION_IS_APPLY: 'false'
 
+
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      targets: ${{ steps.list-targets.outputs.targets }}
+      modules: ${{ steps.list-targets.outputs.modules }}
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - uses: suzuki-shunsuke/github-token-action@04d633c696e9d09e958c8b815c75db9606d6d927 # v0.2.0
+        id: token
+        with:
+          github_token: ${{secrets.gh_token}}
+          github_app_id: ${{secrets.gh_app_id}}
+          github_app_private_key: ${{secrets.gh_app_private_key}}
+          default_github_token: ${{secrets.gh_token}}
+
+      - uses: aquaproj/aqua-installer@d9c4b5d107a17831a8c8718efa4ce67a0923d1f5 # v2.1.3
+        with:
+          aqua_version: v2.16.4
+        env:
+          AQUA_GITHUB_TOKEN: ${{steps.token.outputs.token}}
+
+      - uses: suzuki-shunsuke/tfaction/list-targets@5731fade20e41c1905c04095f0e3d68fac14a636 # v0.7.3
+        id: list-targets
   plan:
     name: "plan (${{matrix.target.target}})"
     runs-on: ${{matrix.target.runs_on}}
+    needs: setup
     # if services is empty, the build job is skipped
-    if: "join(fromJSON(inputs.targets), '') != ''"
+    if: "join(fromJSON(needs.setup.outputs.targets), '') != ''"
     strategy:
       fail-fast: true
       matrix:
-        target: ${{fromJSON(inputs.targets)}}
+        target: ${{fromJSON(needs.setup.outputs.targets)}}
     env:
       TFACTION_TARGET: ${{matrix.target.target}}
       TFACTION_JOB_TYPE: ${{matrix.target.job_type}}
