--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -88,6 +88,7 @@ jobs:
           ssh_key: ${{secrets.terraform_private_module_ssh_key}} # This isn't needed if you don't use SSH key to checkout private Terraform Modules
         env:
           TFE_TOKEN: ${{secrets.tfe_token}}
+          TF_TOKEN_app_terraform_io: ${{secrets.tfe_token}}
       - uses: suzuki-shunsuke/tfaction/get-target-config@26effa08b92b77b5cfe04e2a25c15845fd00b04f # v0.7.2
         id: target-config
 
