--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -113,3 +113,6 @@ jobs:
       - uses: suzuki-shunsuke/tfaction/plan@5731fade20e41c1905c04095f0e3d68fac14a636 # v0.7.3
         with:
           github_app_token: ${{steps.token.outputs.token}}
+        env:
+          TFE_TOKEN: ${{secrets.tfe_token}}
+          TF_TOKEN_app_terraform_io: ${{secrets.tfe_token}}
