--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,10 @@
 name: test
 on:
   workflow_call:
+    inputs:
+      ref:
+        required: false
+        type: string
     secrets:
       gh_token:
         required: false
@@ -18,7 +22,8 @@ on:
 
 env:
   TFACTION_IS_APPLY: 'false'
-
+  GH_COMMENT_SHA1: ${{inputs.ref}}
+  TFCMT_SHA: ${{inputs.ref}}
 
 jobs:
   setup:
@@ -28,22 +33,25 @@ jobs:
       modules: ${{ steps.list-targets.outputs.modules }}
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          ref: ${{inputs.ref}}
       - uses: suzuki-shunsuke/github-token-action@04d633c696e9d09e958c8b815c75db9606d6d927 # v0.2.0
         id: token
         with:
           github_token: ${{secrets.gh_token}}
           github_app_id: ${{secrets.gh_app_id}}
           github_app_private_key: ${{secrets.gh_app_private_key}}
-          default_github_token: ${{secrets.gh_token}}
+          default_github_token: ${{github.token}}
 
-      - uses: aquaproj/aqua-installer@d9c4b5d107a17831a8c8718efa4ce67a0923d1f5 # v2.1.3
+      - uses: aquaproj/aqua-installer@928a2ee4243a9ee8312d80dc8cbaca88fb602a91 # v2.2.0
         with:
-          aqua_version: v2.16.4
+          aqua_version: v2.17.1
         env:
           AQUA_GITHUB_TOKEN: ${{steps.token.outputs.token}}
 
       - uses: suzuki-shunsuke/tfaction/list-targets@5731fade20e41c1905c04095f0e3d68fac14a636 # v0.7.3
         id: list-targets
+
   plan:
     name: "plan (${{matrix.target.target}})"
     runs-on: ${{matrix.target.runs_on}}
@@ -59,6 +67,8 @@ jobs:
       TFACTION_JOB_TYPE: ${{matrix.target.job_type}}
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          ref: ${{inputs.ref}}
       - uses: suzuki-shunsuke/github-token-action@04d633c696e9d09e958c8b815c75db9606d6d927 # v0.2.0
         id: token
         with:
@@ -67,13 +77,13 @@ jobs:
           github_app_private_key: ${{secrets.gh_app_private_key}}
           default_github_token: ${{github.token}}
 
-      - uses: aquaproj/aqua-installer@d9c4b5d107a17831a8c8718efa4ce67a0923d1f5 # v2.1.3
+      - uses: aquaproj/aqua-installer@928a2ee4243a9ee8312d80dc8cbaca88fb602a91 # v2.2.0
         with:
-          aqua_version: v2.16.4
+          aqua_version: v2.17.1
         env:
           AQUA_GITHUB_TOKEN: ${{steps.token.outputs.token}}
 
-      - uses: suzuki-shunsuke/tfaction/export-secrets@26effa08b92b77b5cfe04e2a25c15845fd00b04f # v0.7.2
+      - uses: suzuki-shunsuke/tfaction/export-secrets@5731fade20e41c1905c04095f0e3d68fac14a636 # v0.7.3
         with:
           secrets: ${{secrets.secrets}}
 
@@ -82,14 +92,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{steps.token.outputs.token}}
 
-      - uses: suzuki-shunsuke/tfaction/setup@26effa08b92b77b5cfe04e2a25c15845fd00b04f # v0.7.2
+      - uses: suzuki-shunsuke/tfaction/setup@5731fade20e41c1905c04095f0e3d68fac14a636 # v0.7.3
         with:
           github_app_token: ${{steps.token.outputs.token}}
           ssh_key: ${{secrets.terraform_private_module_ssh_key}} # This isn't needed if you don't use SSH key to checkout private Terraform Modules
         env:
           TFE_TOKEN: ${{secrets.tfe_token}}
           TF_TOKEN_app_terraform_io: ${{secrets.tfe_token}}
-      - uses: suzuki-shunsuke/tfaction/get-target-config@26effa08b92b77b5cfe04e2a25c15845fd00b04f # v0.7.2
+
+      - uses: suzuki-shunsuke/tfaction/get-target-config@5731fade20e41c1905c04095f0e3d68fac14a636 # v0.7.3
         id: target-config
 
       - run: |
@@ -106,7 +117,7 @@ jobs:
               - name: registry.terraform.io/integrations/github
           GITHUB_TOKEN: ${{steps.token.outputs.token}} # For github-comment
 
-      - uses: suzuki-shunsuke/tfaction/test@26effa08b92b77b5cfe04e2a25c15845fd00b04f # v0.7.2
+      - uses: suzuki-shunsuke/tfaction/test@5731fade20e41c1905c04095f0e3d68fac14a636 # v0.7.3
         with:
           github_app_token: ${{steps.token.outputs.token}}
 
