--- a/.github/workflows/hide-comment.yaml
+++ b/.github/workflows/hide-comment.yaml
@@ -2,6 +2,10 @@
 name: Hide comments
 on:
   workflow_call:
+    inputs:
+      ref:
+        required: false
+        type: string
     secrets:
       gh_token:
         required: false
@@ -12,11 +16,15 @@ on:
 permissions:
   contents: read
   pull-requests: write
+env:
+  GH_COMMENT_SHA1: ${{inputs.ref}}
 jobs:
   hide-comment:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          ref: ${{inputs.ref}}
       - uses: suzuki-shunsuke/github-token-action@04d633c696e9d09e958c8b815c75db9606d6d927 # v0.2.0
         id: token
         with:
@@ -24,9 +32,9 @@ jobs:
           github_app_id: ${{secrets.gh_app_id}}
           github_app_private_key: ${{secrets.gh_app_private_key}}
           default_github_token: ${{github.token}}
-      - uses: aquaproj/aqua-installer@d9c4b5d107a17831a8c8718efa4ce67a0923d1f5 # v2.1.3
+      - uses: aquaproj/aqua-installer@928a2ee4243a9ee8312d80dc8cbaca88fb602a91 # v2.2.0
         with:
-         aqua_version: v2.16.4
+         aqua_version: v2.17.1
         env:
           AQUA_GITHUB_TOKEN: ${{steps.token.outputs.token}}
       - run: github-comment exec -- github-comment hide
